# vertex_clique_covers

./: Cargo.toml  README.md
src/: main.rs
