[package]
name = "vcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.9.0"
bitvec_simd = "0.20"
fastrand = "1.8.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
#debug = true
